--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
 * Testing
 ** Ubuntu/Debian
 
+#+begin_src BASH
 apt-get install libboost-all-dev qt4-dev-tools
 
 mkdir build
@@ -8,3 +9,4 @@ cd build
 cmake -DCMAKE_INSTALL_PREFIX=~/bin
 make
 make install
+#+end_src
